# maxim-cookbooks

./: .gitignore
.github/: dependabot.yml
.github/workflows/: maxim-test-runs.yml
go/observability-online-eval/manual-tracing/: go.mod  go.sum
python/observability-online-eval/agno/: README.md  agent.ipynb  agent.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
python/observability-online-eval/agno/cooking-agent/: README.md  carbonara.md  cooking_agent.ipynb  pyproject.toml  requirements.txt
python/observability-online-eval/bedrock/: pyproject.toml  single-line-integration.ipynb
python/observability-online-eval/coding-agent/: .env.example  README.md  app.py  cli.py  evaluators.md  pyproject.toml
python/observability-online-eval/coding-agent/coding_agent/: agent.py  ai.py  execution.py  files.py  observability.py
python/observability-online-eval/crew-ai/cooking-agent/: requirements.txt
python/observability-online-eval/eleven-labs/: README.md  pyproject.toml  stt_tts_pipeline.ipynb  stt_tts_pipeline.py  stt_tts_pipeline_with_openai.py
python/observability-online-eval/eleven-labs/files/: .gitkeep
python/observability-online-eval/fireworks/: fireworks.ipynb
python/observability-online-eval/groq/: groq.ipynb
python/observability-online-eval/langchain/: basic.ipynb  chain.ipynb  pyproject.toml
python/observability-online-eval/litellm/: litellm-one-line-integration.ipynb
python/observability-online-eval/litellm-proxy/: Dockerfile  pyproject.toml  requirements.txt
python/observability-online-eval/livekit/: .env.example  livekit-otel.py  pyproject.toml
python/observability-online-eval/livekit/personal_shopper/: README.md  personal_shopper.py
python/observability-online-eval/openai/computer-use/: pyproject.toml  requirements.txt
python/observability-online-eval/openai/openai-agents-sdk/: pyproject.toml  voice_agent.ipynb  voice_agent.py
python/observability-online-eval/openai/openai-realtime/: main.py  pyproject.toml
python/observability-online-eval/openai/openai-sdk/: one-line-integration.ipynb  pyproject.toml
python/observability-online-eval/together/: .env.example  example.ipynb  manual_tracing.ipynb  pyproject.toml
python/prompt-management/: proxy_prompts_via_maxim.ipynb
python/test-runs/: offline-evals-via-logs.ipynb
typescript/observability-online-eval/manual-tracing/: package.json
typescript/react-native/: package.json
typescript/test-runs/: package.json
(+39 files in other folders)
