[project]
name = "maxim-livekit-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "livekit>=1.0.23",
    "livekit-agents[google,openai,silero]>=1.3.8",
    "livekit-plugins-turn-detector>=1.3.8",
    "livekit-api>=1.1.0",
    "maxim-py",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.7.5",
]
